samples/_failures_safe/1761729637_fd670d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_798d16d9.c: In function ‘main’:
./samples/SAFE/__tmp_798d16d9.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
